alignment bug fixed, website structure redesigned (impact section)

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1146,6 +1146,7 @@ section {
 /*--------------------------------------------------------------
 # Team
 --------------------------------------------------------------*/
+
 .team {
   background: #fff;
   padding: 60px 0;
@@ -1236,9 +1237,7 @@ section {
 .contact .info {
   width: 100%;
   background: #fff;
-  margin-left: 100%;
   text-align: center;
-  align-items: center;
 }
 
 .contact .info i {
